# pypsa-pl

./: .gitignore  install.sh  prepare_input_files.py  pyproject.toml  pypsa-pl.ipynb  run_pypsa_lopf.py
inputs/instrat_hprices/: scenario.xlsx
inputs/instrat_hprices2/: cbf_links.xlsx  scenario.xlsx
outputs/: pypsapl_outputs.xlsx
scripts/: import_data_to_pypsa.py
